added pseudocode notes to html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
 
+    <!-- All div elements are inside "container" -->    
     <div id="container">
         
         <div id="header">
@@ -17,6 +18,7 @@
             <p>nav</p>
         </div>
 
+        <!-- Floating elements are inside "content" div id -->
         <div id="content">
 
             <div id="section">
@@ -39,6 +41,8 @@
             
             </div>
 
+            <!-- Had trouble positioning "aside" box element -->
+            <!-- Pushdown resulted from increasing margin/padding too much -->
             <div id="aside">
                 <p>aside</p>
             </div>
